// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traceability metadata snapshots > snapshot canonical markdown traceability metadata 1`] = `
{
  "artifactId": undefined,
  "blockingOpenQuestionCount": 0,
  "boundary": "canonical",
  "claimCount": 2,
  "claimReferences": [
    {
      "claimId": "claim-001",
      "claimType": "decision",
      "confidence": "explicit",
      "isGenerated": false,
      "isInferred": false,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": false,
      "reviewState": "approved",
      "shortSummary": "Test decision claim",
      "sourceCount": 1,
      "status": "confirmed",
    },
    {
      "claimId": "claim-inferred-001",
      "claimType": "assumption",
      "confidence": "inferred",
      "isGenerated": false,
      "isInferred": true,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": true,
      "reviewState": "required",
      "shortSummary": "Inferred assumption claim",
      "sourceCount": 0,
      "status": "requires_review",
    },
  ],
  "diagnostics": [],
  "documentCanonicalId": "01-thesis",
  "generatedAt": "2025-06-01T12:00:00.000Z",
  "generationRunId": "gen-run-001",
  "inferredClaimCount": 1,
  "missingSourceCount": 1,
  "outputKind": "canonical_markdown",
  "outputPath": "logos/01-foundation/01-thesis.md",
  "phaseId": "01-foundation",
  "profileId": "standard",
  "registerSummary": {
    "assumptionCount": 1,
    "blockingOpenQuestionCount": 1,
    "decisionCount": 1,
    "hypothesisCount": 0,
    "missingSourceCount": 2,
    "openQuestionCount": 1,
    "reviewRequiredCount": 1,
    "riskCount": 1,
  },
  "reviewRequiredCount": 1,
  "sourceCount": 2,
  "sourceReferences": [
    {
      "confidence": "explicit",
      "lineReference": undefined,
      "pointer": undefined,
      "relatedClaimId": undefined,
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedRegisterItemId": undefined,
      "relatedValidationFindingId": undefined,
      "relativeSourcePath": "logos/01-foundation/thesis.md",
      "reviewMarker": "approved",
      "section": undefined,
      "sourceId": "src-001",
      "sourceTimestamp": "2025-06-01T12:00:00.000Z",
      "sourceType": "document",
      "status": "confirmed",
      "title": "Test Document Source",
    },
    {
      "confidence": "explicit",
      "lineReference": undefined,
      "pointer": undefined,
      "relatedClaimId": undefined,
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedRegisterItemId": undefined,
      "relatedValidationFindingId": undefined,
      "relativeSourcePath": "logos/01-foundation/thesis.md",
      "reviewMarker": "approved",
      "section": undefined,
      "sourceId": "src-002",
      "sourceTimestamp": "2025-06-01T12:00:00.000Z",
      "sourceType": "profile_descriptor",
      "status": "confirmed",
      "title": "Profile Source",
    },
  ],
  "unresolvedQuestionCount": 0,
  "validationRunId": undefined,
}
`;

exports[`traceability metadata snapshots > snapshot derived artifact traceability metadata 1`] = `
{
  "artifactId": undefined,
  "blockingOpenQuestionCount": 0,
  "boundary": "derived",
  "claimCount": 1,
  "claimReferences": [
    {
      "claimId": "claim-001",
      "claimType": "decision",
      "confidence": "explicit",
      "isGenerated": false,
      "isInferred": false,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": false,
      "reviewState": "approved",
      "shortSummary": "Test decision claim",
      "sourceCount": 1,
      "status": "confirmed",
    },
  ],
  "diagnostics": [],
  "documentCanonicalId": undefined,
  "generatedAt": "2025-06-01T12:00:00.000Z",
  "generationRunId": "gen-run-001",
  "inferredClaimCount": 0,
  "missingSourceCount": 0,
  "outputKind": "html_artifact",
  "outputPath": undefined,
  "phaseId": undefined,
  "profileId": "standard",
  "registerSummary": {
    "assumptionCount": 1,
    "blockingOpenQuestionCount": 1,
    "decisionCount": 1,
    "hypothesisCount": 0,
    "missingSourceCount": 2,
    "openQuestionCount": 1,
    "reviewRequiredCount": 1,
    "riskCount": 1,
  },
  "reviewRequiredCount": 0,
  "sourceCount": 1,
  "sourceReferences": [
    {
      "confidence": "explicit",
      "lineReference": undefined,
      "pointer": undefined,
      "relatedClaimId": undefined,
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedRegisterItemId": undefined,
      "relatedValidationFindingId": undefined,
      "relativeSourcePath": "logos/01-foundation/thesis.md",
      "reviewMarker": "approved",
      "section": undefined,
      "sourceId": "src-001",
      "sourceTimestamp": "2025-06-01T12:00:00.000Z",
      "sourceType": "document",
      "status": "confirmed",
      "title": "Test Document Source",
    },
  ],
  "unresolvedQuestionCount": 0,
  "validationRunId": undefined,
}
`;

exports[`traceability metadata snapshots > snapshot generation report traceability summary 1`] = `
{
  "artifactId": undefined,
  "blockingOpenQuestionCount": 0,
  "boundary": "canonical",
  "claimCount": 1,
  "claimReferences": [
    {
      "claimId": "claim-001",
      "claimType": "decision",
      "confidence": "explicit",
      "isGenerated": false,
      "isInferred": false,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": false,
      "reviewState": "approved",
      "shortSummary": "Test decision claim",
      "sourceCount": 1,
      "status": "confirmed",
    },
  ],
  "diagnostics": [],
  "documentCanonicalId": "01-thesis",
  "generatedAt": "2025-06-01T12:00:00.000Z",
  "generationRunId": undefined,
  "inferredClaimCount": 0,
  "missingSourceCount": 0,
  "outputKind": "canonical_markdown",
  "outputPath": "logos/01-foundation/01-thesis.md",
  "phaseId": "01-foundation",
  "profileId": "standard",
  "registerSummary": undefined,
  "reviewRequiredCount": 0,
  "sourceCount": 1,
  "sourceReferences": [
    {
      "confidence": "explicit",
      "lineReference": undefined,
      "pointer": undefined,
      "relatedClaimId": undefined,
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedRegisterItemId": undefined,
      "relatedValidationFindingId": undefined,
      "relativeSourcePath": "logos/01-foundation/thesis.md",
      "reviewMarker": "approved",
      "section": undefined,
      "sourceId": "src-001",
      "sourceTimestamp": "2025-06-01T12:00:00.000Z",
      "sourceType": "document",
      "status": "confirmed",
      "title": "Test Document Source",
    },
  ],
  "unresolvedQuestionCount": 0,
  "validationRunId": undefined,
}
`;

exports[`traceability metadata snapshots > snapshot validation report traceability summary 1`] = `
{
  "artifactId": undefined,
  "blockingOpenQuestionCount": 0,
  "boundary": "non_canonical",
  "claimCount": 2,
  "claimReferences": [
    {
      "claimId": "claim-001",
      "claimType": "decision",
      "confidence": "explicit",
      "isGenerated": false,
      "isInferred": false,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": false,
      "reviewState": "approved",
      "shortSummary": "Test decision claim",
      "sourceCount": 1,
      "status": "confirmed",
    },
    {
      "claimId": "claim-inferred-001",
      "claimType": "assumption",
      "confidence": "inferred",
      "isGenerated": false,
      "isInferred": true,
      "primarySourceId": "src-001",
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedSectionId": undefined,
      "relatedSectionPath": undefined,
      "reviewRequiredMarker": true,
      "reviewState": "required",
      "shortSummary": "Inferred assumption claim",
      "sourceCount": 0,
      "status": "requires_review",
    },
  ],
  "diagnostics": [],
  "documentCanonicalId": undefined,
  "generatedAt": "2025-06-01T12:00:00.000Z",
  "generationRunId": undefined,
  "inferredClaimCount": 1,
  "missingSourceCount": 1,
  "outputKind": "validation_report",
  "outputPath": undefined,
  "phaseId": undefined,
  "profileId": "standard",
  "registerSummary": undefined,
  "reviewRequiredCount": 1,
  "sourceCount": 1,
  "sourceReferences": [
    {
      "confidence": "explicit",
      "lineReference": undefined,
      "pointer": undefined,
      "relatedClaimId": undefined,
      "relatedDocumentCanonicalId": undefined,
      "relatedPhaseId": undefined,
      "relatedRegisterItemId": undefined,
      "relatedValidationFindingId": undefined,
      "relativeSourcePath": "logos/01-foundation/thesis.md",
      "reviewMarker": "approved",
      "section": undefined,
      "sourceId": "src-001",
      "sourceTimestamp": "2025-06-01T12:00:00.000Z",
      "sourceType": "document",
      "status": "confirmed",
      "title": "Test Document Source",
    },
  ],
  "unresolvedQuestionCount": 0,
  "validationRunId": "val-run-001",
}
`;
